--- a/public/css/style.css
+++ b/public/css/style.css
@@ -331,6 +331,9 @@ body.fixed-nav #wrapper #page-wrapper {
 body.top-navigation.fixed-nav #wrapper #page-wrapper {
   margin-top: 0;
 }
+body.fixed-nav.fixed-nav-basic .navbar-fixed-top {
+  left: 220px;
+}
 .fixed-nav .minimalize-styl-2 {
   margin: 14px 5px 5px 15px;
 }
