include title in template views for highlighting

--- a/public/css/web_app/web_app.css
+++ b/public/css/web_app/web_app.css
@@ -269,6 +269,11 @@ a.back-to-top:hover {
 	background-color: transparent !important;
 }
 
+.highlight {
+	background-color: yellow;
+	text-decoration: underline;
+}
+
 .open > .dropdown-menu.dropdown-left {
 	right: 0;
 	left: auto;
