--- a/public/css/web_app/web_app.css
+++ b/public/css/web_app/web_app.css
@@ -252,6 +252,10 @@ a.back-to-top:hover {
 
 
 /* Report */
+.report-list .report {
+	margin-bottom: 30px;
+}
+
 .report-box:hover {
 	cursor: pointer;
 	-webkit-box-shadow: 0px 0px 7px 0px rgba(133,133,133,1);
