--- a/resources/css/origin/origin.css
+++ b/resources/css/origin/origin.css
@@ -161,6 +161,10 @@ a.back-to-top:hover {
 	padding: 0.5rem 1rem;
 	font-size: 0.9rem;
 }
+.dropdown-item.change-theme:active {
+	color: #212529;
+	background-color: #fff;
+}
 .dropdown-divider {
 	margin: 0;
 }
@@ -475,7 +479,10 @@ table > tbody > tr > td > a:hover {
 .navbar-nav > .user-menu .default-picture.user-image {
 	float: left;
 }
-.navbar-nav>.user-menu .user-image {
+.navbar-nav > .user-menu > .dropdown-menu {
+	width: 200px;
+}
+.navbar-nav > .user-menu .user-image {
 	margin-right: 0;
 }
 .navbar-nav .user-menu .dropdown-toggle {
@@ -826,6 +833,69 @@ table > tbody > tr > td > a:hover {
 		width: 36em;
 	}
 }
+/* switch input start */
+.switch-input {
+	display: none;
+}
+.switch-label {
+	position: relative;
+	display: inline-block;
+	min-width: 112px;
+	cursor: pointer;
+	font-weight: 500;
+	text-align: left;
+	margin: 0;
+	padding-left: 44px;
+}
+.switch-label:before, .switch-label:after {
+	content: "";
+	position: absolute;
+	margin: 0;
+	outline: 0;
+	top: 50%;
+	-ms-transform: translate(0, -50%);
+	-webkit-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+.switch-label:before {
+	left: 1px;
+	width: 34px;
+	height: 14px;
+	background-color: #9E9E9E;
+	border-radius: 8px;
+}
+.switch-label:after {
+	left: 0;
+	width: 20px;
+	height: 20px;
+	background-color: #FAFAFA;
+	border-radius: 50%;
+	box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084);
+}
+.switch-label .toggle--on {
+	display: none;
+}
+.switch-label .toggle--off {
+	display: inline-block;
+}
+.switch-input:checked + .switch-label:before {
+	background-color: #007bff;
+}
+.switch-input:checked + .switch-label:after {
+	background-color: #dee2e6;
+	-ms-transform: translate(80%, -50%);
+	-webkit-transform: translate(80%, -50%);
+	transform: translate(80%, -50%);
+}
+.switch-input:checked + .switch-label .toggle--on {
+	display: inline-block;
+}
+.switch-input:checked + .switch-label .toggle--off {
+	display: none;
+}
+/* switch input end */
 /* dark mode start */
 .dark-mode img {
 	filter: brightness(.8) contrast(1.2);
@@ -838,9 +908,6 @@ table > tbody > tr > td > a:hover {
 }
 .dark-mode .default-picture i, .dark-mode .default-avatar i {
 	color: #ced4da;
-}
-.dark-mode .module-btn, .dark-mode .report-btn {
-	filter: brightness(80%);
 }
 .dark-mode .module-label, .dark-mode .module-label a {
 	color: #fff;
@@ -951,6 +1018,27 @@ table > tbody > tr > td > a:hover {
 .navbar-dark .btn-navbar, .navbar-dark .form-control-navbar {
 	border: none;
 }
+.dark-mode .bootstrap-datetimepicker-widget table thead tr:first-child th:hover {
+	background: #495057;
+	color: #fff;
+}
+.dark-mode .bootstrap-datetimepicker-widget table td.day:hover, .dark-mode .bootstrap-datetimepicker-widget table td.hour:hover, .dark-mode .bootstrap-datetimepicker-widget table td.minute:hover, .dark-mode .bootstrap-datetimepicker-widget table td.second:hover {
+	background: #495057;
+	color: #fff;
+}
+.dark-mode .bootstrap-datetimepicker-widget table td i, .dark-mode .bootstrap-datetimepicker-widget table td span {
+	color: #fff;
+}
+.dark-mode .bootstrap-datetimepicker-widget table td i:hover, .dark-mode .bootstrap-datetimepicker-widget table td span:hover {
+	background: #495057;
+}
+.dark-mode .bootstrap-datetimepicker-widget table td i.active, .dark-mode .bootstrap-datetimepicker-widget table td span.active {
+	background-color: #495057;
+	color: #007bff;
+}
+.dark-mode .bootstrap-datetimepicker-widget table td.active, .dark-mode .bootstrap-datetimepicker-widget table td.active:hover {
+	background: #495057;
+}
 .dark-mode .trumbowyg-box, .dark-mode .trumbowyg-editor {
 	border-color: #6c757d;
 }
@@ -986,6 +1074,9 @@ table > tbody > tr > td > a:hover {
 }
 .dark-mode .main-footer .footer-link {
 	color: #007bff;
+}
+.dark-mode .switch-input:checked+.switch-label:before {
+	background-color: #3f6791;
 }
 /* dark mode end */
 @media (max-width: 767px) {
