--- a/resources/css/origin/origin.css
+++ b/resources/css/origin/origin.css
@@ -106,6 +106,10 @@
 	border: 1px solid #dc3545;
 	background-image: none;
 }
+.custom-select.is-invalid {
+	background-color: #f4f6f9 !important;
+	background: #fff url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E) right .75rem center/8px 10px no-repeat;
+}
 .form-control:focus:not(.is-invalid), .custom-select:focus:not(.is-invalid) {
 	outline: 0;
 	background-color: #f4f6f9;
@@ -369,6 +373,9 @@ table > tbody > tr > td > a:hover {
 	border: 0;
 }
 /* List View */
+.content-header h1 {
+	font-size: 1.7rem;
+}
 .list-responsive {
 	position: relative;
 }
